# resume-analyzer

./: .gitignore  COZE_PLATFORM_GUIDE.md  COZE_PUBLISH_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_GUIDE.md  DEPLOY_TO_COZE.md  GITEE_PAGES_GUIDE.md  GITHUB_PAGES_DEPLOY_GUIDE.md  GITHUB_PAGES_GUIDE.md  GITHUB_PAGES_TROUBLESHOOTING.md  IDE_TO_PLATFORM_GUIDE.md  PDF_UPLOAD_PROGRESS.md  PROJECT_INFO.md  PUBLISH_TO_STORE_GUIDE.md  QUICK_DEPLOY.md  QUICK_START_GUIDE.md  README.md  README_AGENT.md  README_PDF_SUPPORT.md  WECHAT_INTEGRATION_GUIDE.md  deploy.sh  deploy_github_pages.sh  push_to_github.sh  pyproject.toml  requirements-vercel.txt  requirements.txt  start_server.py  test_agent.py  test_upload.py  upload_web.py  vercel.json
api/: requirements.txt  upload.py  upload_file.py
assets/: index.html  resume-analyzer.html  resume-chat.html
config/: agent_llm_config.json
docs/: index.html  test-api.html
docs/guides/: COZE_BOT_OPTIMIZED_PROMPT.md  COZE_BOT_PERFORMANCE_OPTIMIZATION.md  COZE_BOT_QUICK_GUIDE.md  COZE_BOT_SIMPLE_PROMPT.md  FINAL_SOLUTION.md  WEB_SDK_ACCESS.md  WEB_SDK_GUIDE.md
scripts/: http_run.sh  local_run.sh  pack.sh  prepare_deploy.sh  setup.sh
src/: main.py
src/agents/: agent.py
src/api/: upload.py
src/storage/memory/: __init__.py  memory_saver.py
src/tools/: file_uploader.py  pdf_generator.py  resume_parser.py
src/utils/file/: file.py
